# avif_server_rs

./: Cargo.toml  LICENSE  README.md  README_zh-CN.md
.github/workflows/: rust.yml
assets/: example_config.toml
src/: backend.rs  cache.rs  config.rs  handler.rs  main.rs
