[package]
name = "avif-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12", features = ["rustls"] }
anyhow = "1.0"
blake3 = "1.8"
opendal = { version = "0.55", features = ["services-fs", "services-http", "services-s3"] }
serde = "1.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
reqwest = "0.12"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.4"
image = { version = "0.25.6", features = ["rayon"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1