[package]
name = "avif-server-rs"
description = "A tool for converting images to AVIF/WebP"
version = "0.1.0"
edition = "2024"
authors = ["Tuxium <ursusfeline07@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LGY07/avif_server_rs/"
license = "MIT"

[dependencies]
actix-web = { version = "4.12", features = ["rustls"] }
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["rayon"] }
opendal = { version = "0.55", features = ["services-fs", "services-http", "services-s3"] }
reqwest = "0.12"
serde = "1.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1